--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <title>Solo Soul</title>
 </head>
 
-<body>
+<body style='background-color: #000000;'>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
