--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Solo Soul</title>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 
 <body style='background-color: #000000;'>
